Rename folders: frontend -> client, backend -> server

--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,9 @@ yarn-error.log*
 .env.production.local
 
 # Build outputs
-/frontend/build
-/frontend/dist
-/backend/dist
+/client/build
+/client/dist
+/server/dist
 
 # Logs
 logs
